plugin to run as maven test